# quantum-environment

./: README.md  pyproject.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  detailed_objectives.md  week_objectives.md
.github/workflows/: ci.yml  docs.yml
compiler/gates/: base.py  composite.py  single_qubit.py  two_qubit.py
compiler/tests/: test_gates_v1.py
core/: config.py  constants.py  errors.py  logger.py  math_utils.py  random_utils.py
core/interfaces/: circuit.py  classical.py  enums.py  gate.py  instruction.py  parameter.py
core/linalg/: matrices.py  statevector.py  vectors.py
docs/: README.md
docs/research/notes/: algo_gen_nn.md
docs/roadmap/: 52_week_roadmap.md
tools/linting/: STYLE_GUIDE.md  mypy.ini  precommit-config.yaml  pyptoject.toml  run_lint.sh
